# waterslide

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindHiRedis.cmake  FindPaho.cmake
examples/: csv_in_ex.txt
src/include/: waterslide.h  wscalc.h
src/include/shared/: shared_queue.h
src/lib/: graph.y  init.c  so_loader.c  sysutil.c  waterslidedata.c  wscalc.l  wscalc.y
src/procs/: proc_calc.c  proc_dupestring.c  proc_wsproto_in.cc
src/procs/protobuf/: wsproto.proto  wsserial.proto
